change in folder structure

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./assets/images/favicon-32x32.png"
     />
     <title>Frontend Mentor | QR code component</title>
-    <link rel="stylesheet" href="src/css/style.css" />
-    <link rel="stylesheet" href="src/css/animation.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/animation.css" />
   </head>
 
   <body>
@@ -19,8 +19,8 @@
       <section class="qr-code">
         <div class="qr-code__wrapper-img">
           <img
-            src="./images/image-qr-code.png"
-            alt="qr code representation; image with background color blue and qr code white"
+            src="./assets/images/image-qr-code.png"
+            alt="qr code representation"
           />
         </div>
         <div class="qr-code__content">
